k8/posgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
        tier: postgreSQL
    spec:
      containers:
        - name: postgresql
          image: postgres:9.6.2-alpine
          ports:
            - containerPort: 5432
              name: postgresql
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-claim
        - name: postgresql-credentials
          secret:
            secretName: postgresql-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  ports:
    - port: 5432
  selector:
    app: postgresql
    tier: postgreSQL
