k8/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      labels:
        service: postgres
    spec:
      volumes:
        -
          name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
        - name: postgres
          image: postgres:12
          volumeMounts:
            -
              mountPath: /var/lib/postgresql/data
              name: postgres-pv-storage
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 100Mi
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    service: postgres

---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: rdx-postgres-network-policy
# spec:
#   ingress:
#     - ports:
#         - port: 5432
#       protocol: TCP
#   podSelector:
#     matchLabels:
#       service: postgres-service
#       app: rdx-backend-app
#   policyTypes:
#     - Ingress

# ---
