k8/postgres-network-policy.yaml
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: rdx-postgres-network-policy
spec:
  ingress:
    - ports:
        - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      service: postgres
      app: rdx-backend-app
  policyTypes:
    - Ingress

---
